--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="banner">
-      <video autoplay="autoplay" id="bgvid" loop="loop" poster="post_image_path.jpg" title="Title">
+      <video autoplay="autoplay" id="bgvid" loop="loop"  title="Title">
           <source src="assets/img/blog/videobg.mp4" type="video/webm" ></source>
          
       </video>
