--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
             <div class="card-item">
               <div class="row">
                 <div class="col-xl-7">
-                  <div class="card-bg" style="background-image: url(assets/img/skit1.jpg);"></div>
+                  <div class="card-bg" style="background-image: url(assets/img/ssit1.jpeg);"></div>
                 </div>
                 <div class="col-xl-5 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Python Full Stack Development.</h4>
+                    <h4 class="card-title">Webscrapping using Python @SSIT Tumkur.</h4>
                     <p></p>
                   </div>
                 </div>
@@ -173,11 +173,11 @@
             <div class="card-item">
               <div class="row">
                 <div class="col-xl-7">
-                  <div class="card-bg" style="background-image: url(assets/img/skit2.jpg);"></div>
+                  <div class="card-bg" style="background-image: url(assets/img/skit2.jpeg);"></div>
                 </div>
                 <div class="col-xl-5 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Machine Learning workshop</h4>
+                    <h4 class="card-title">Machine Learning workshop @SKIT bengaluru</h4>
                     <p></p>
                   </div>
                 </div>
