adding testinomials pics

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/vijay.jpeg" class="testimonial-img" alt="">
                   <h3>Vijay B R</h3>
                   <h4>IT manager &amp; Trainer</h4>
                   <div class="stars">
@@ -226,28 +226,12 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Pavithra</h3>
-                  <h4>Intern at MeviTechnologies</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
-                  <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
-                    Mevi technologies is a very good company wherein websites are developed, internships are provided to students, They also train students on various concepts like machine learning,web technologies etc by conducting student development programs.I attended their 4 day sdp session on web technologies and it was very helpful and educational where I could learn many things as a beginner
-                    <i class="bi bi-quote quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
+            
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/swasthik.jpeg" class="testimonial-img" alt="">
                   <h3>R SWASTHIK </h3>
                   <h4>student - Reva University</h4>
                   <div class="stars">
@@ -266,25 +250,41 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Kaif Ahmed Siddiqui </h3>
+                  <img src="assets/img/testimonials/neeyal.jpeg" class="testimonial-img" alt="">
+                  <h3>neeyal </h3>
                   <h4>Student - Reva University</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Megha mam was amazing, she taught me so many things in 4 days , she didn’t only taught how to progress in your subject but also how to grow in life , her session was one of the amazing sessions we had , I hope she comes for next sdp classes too 
+                    I would probably categorize Mevi Technology as a 'User friendly company' , no am not kidding these guys respond to everything , either be it internship or helping you guide on your career . I am actually happy for spending a week with this wonderful hoomans especially megha maam and vijay sir , who are on their toes to make student's life more and more better 
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/no.jpg" class="testimonial-img" alt="">
+                  <h3>Pavithra</h3>
+                  <h4>Intern at MeviTechnologies</h4>
+                  <div class="stars">
+                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                  </div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    Mevi technologies is a very good company wherein websites are developed, internships are provided to students, They also train students on various concepts like machine learning,web technologies etc by conducting student development programs.I attended their 4 day sdp session on web technologies and it was very helpful and educational where I could learn many things as a beginner
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/megha.jpeg" class="testimonial-img" alt="">
                   <h3>Megha B S</h3>
                   <h4>Trainer and Developer</h4>
                   <div class="stars">
