--- a/about.html
+++ b/about.html
@@ -379,9 +379,9 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Vijay B R</h3>
-                <h4>IT manager &amp; Trainer</h4>
+                <img src="assets/img/testimonials/shwetha.jpg" class="testimonial-img" alt="">
+                <h3>Shwetha</h3>
+                <h4>Student - East West college of Engineering </h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
@@ -398,7 +398,7 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/navya.jpg" class="testimonial-img" alt="">
                 <h3>Navya RS</h3>
                 <h4>Intern</h4>
                 <div class="stars">
@@ -416,7 +416,7 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/deeksha.jpg" class="testimonial-img" alt="">
                 <h3>Deeksha </h3>
                 <h4>student - East West college of engineering</h4>
                 <div class="stars">
@@ -434,7 +434,7 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/ahmed.jpg" class="testimonial-img" alt="">
                 <h3>Kaif Ahmed Siddiqui </h3>
                 <h4>Student - Reva University</h4>
                 <div class="stars">
@@ -452,15 +452,15 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Megha B S</h3>
-                <h4>Trainer and Developer</h4>
+                <img src="assets/img/testimonials/shruthi.jpg" class="testimonial-img" alt="">
+                <h3>Shruthi </h3>
+                <h4>student - East West college of engineering</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Great policies and procedures followed. Gives opportunities of working in highly complicated projects. Provide best facilities for employee.
+                  I am able to understand the concept perfectly.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
