--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <div class="banner">
-      <video autoplay="autoplay" id="bgvid" loop="loop" title="Title">
+      <video autoplay muted playsinline id="bgvid" loop="loop" title="Title">
           <source src="assets/img/blog/videobg.mp4" type="video/webm" >
          
       </video>
