--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
             
-            <h2 data-aos="fade-down" style="color:Gold;"><Strong></Strong><span>Welcome To Mevi Technologies</span></Strong></h2>
+            <h2 data-aos="fade-down" style="color:hsl(51, 100%, 50%);"><Strong></Strong><span>Welcome To Mevi Technologies</span></Strong></h2>
             <strong><p data-aos="fade-up">Lets keep it simple......</p></strong>
             <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Get Started</a>
           </div>
