--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src=" /img/logo.png" alt=""> 
+        <img src="assets/img/logo.png" alt=""> 
        
       </a>
 
